[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_packaging_practice"
version = "0.1.0"
description = "A Python backend project"
authors = [
    { name="Name", email="your.email@example.com" }
]

dependencies = [
    "pyyaml",
    # Add other dependencies here
]

[tool.extra]
dev-dependencies = ["pytest", "ruff"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
exclude = ["tests/", "docs/"]

[tool.pytest]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]